Updated login/password hash - need to create reset password script

--- a/sass/style1.scss
+++ b/sass/style1.scss
@@ -6,6 +6,7 @@
 
 @include dropdown(); // to style dropdowns
 
+@import "fonts/google-fonts";
 @import "fonts/proxima-nova";
 @import "fonts/popboard";
 
